MRDFITS:       LONG64 stuff, handle degenerate excess NAXIS keywords
MWRFITS_CHUNKS: More bug fixes for appending to existing FITS binary
               tables for string-type elements.  Bug fix to allow appending
               string elements that are different lengths, though if the
               appended strings are longer then they get truncated.
NW_RGB_MAKE: Trivial bug fixes; change SPLOG statements to PRINT.
               Change default quality to 100.  Other changes???
POLYWARP_SHIFT: Wrapper on polywarp to do a simple shift.
USNOB2FITS: Compress files locally, then copy to target.

mangle1.4/src/mrb_balkanize.c: Add QA print statement for number of caps.
src/mangle1.4/src/manglefn.h, mrb_balkanize.c, new_poly.c:
               Flush memory usage where possible.

-------------------------------------------------------------------------------
v5_0_3 (August 18, 2004) running on IDL 5.4 - 6.0
Tagged for photoop v1_6 (for the SDSS Orion data release)

ALM2HEALPIX,HEAL_SMOOTH,MQLADVANCE: Avoid floating-point underflows.
ATV,ATV_JOE_WRITEPS,SPLOT,SXASCII_READ,TEXTOIDL,YANNY_READ:
               Replace calls to the obsolete function RSTRPOS()
               with STRPOS(/REVERSE_SEARCH).
ATV: Fix bug introduced for Healpix when reading non-Healpix files.
               Reject complex inputs (Finkbeiner).
BSPLINE_ITERFIT: Fix crash condition for when only 1 point to fit.
DPF_NEST2RING,DPF_PIX2ANG_RING: Cache lookup table for wicked speed.
DPF_PIX2ANG_NEST: Added (simply calls dpf_nest2ring and dpf_pix2ang_ring).
DJS_OPLOT,DJS_OPLOTERR,DJS_PLOT: Bug fix in case Y is set to the value zero.
DJS_RGB_MAKE: Code to create JPEG from 3 FITS files based upon NW_RGB_MAKE,
               but saturating stars to a single color per object.
EXACT_PHOTFRAC,GROW_OBJECT,INTERP_PROFMEAN,POPULATE_IMAGE,REJECT_CR,
               GAREA,GVERTS,READ_FITS_POLYGONS,VMID,DJS_AVSIGCLIP,
               DJS_CORRELATE,DJS_MEDIAN,MEMSHIFT,NNLS,EFC2D,EFCMN,