@@ -31,6 +31,8 @@ MWRFITS_CHUNKS: More bug fixes for appending to existing FITS binary
                tables for string-type elements.  Bug fix to allow appending
                string elements that are different lengths, though if the
                appended strings are longer then they get truncated.
+NMF_SPARSE, MMEVAL, MMSPARSE: New procedure (and utility procedures) for 
+               nonnegative PCA on sparse data matrices. 
 NW_RGB_MAKE: Trivial bug fixes; change SPLOG statements to PRINT.
                Change default quality to 100.  Other changes???
 POLYWARP_SHIFT: Wrapper on polywarp to do a simple shift.
